--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 }
+/* NAV BAR */
 nav {
 	background-color: #008bce;
 	width: 100%;
@@ -48,8 +49,44 @@ svg{
 	fill: #fff;
 	transform: translate(0, 10px);
 }
-
-
+/* END OF NAV BAR */
+section{
+	max-width: 1200px;
+	margin: 0 auto;
+	display: grid;
+	grid-template-columns: 250px 1fr;
+}
+aside{
+	color: #008bce;
+}
+aside img{
+	max-width: 250px;
+	max-height: auto; 
+	margin-top: 50px;
+}
+aside p{
+	text-align: center;
+	margin: 7px;
+}
+aside select{
+	width: 250px;
+	height: 35px;
+}
+aside input{
+	width: 246px;
+	height: 29px;
+}
+aside button{		
+	width: 250px;
+	height: 35px;		
+	background-color: #008bce;
+	color: white;
+	margin-top: 18px;
+}
+#price{
+	text-align: left;
+	margin-top: 20px;
+}
 
 
 /* MEDIA QUERIES */
