--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+*{
+	box-sizing: border-box;
+}
 body {
 	margin: 0;
 	padding: 0;
@@ -55,6 +58,7 @@ section{
 	margin: 0 auto;
 	display: grid;
 	grid-template-columns: 250px 1fr;
+	padding: 0 50px 100px 50px;
 }
 aside{
 	color: #008bce;
@@ -95,15 +99,92 @@ aside button{
 	padding-left: 70px;
 }
 .text img{
-	transform: translate(15px, 5px);
 	height: 25px;
 	width: 25px;
 }
-
+.purchase{
+	width: 250px;
+}
+.purchase button{
+	width: 250px;
+	padding: 5px;
+	background-color: #008bce;
+	color: white;
+}
+.purchase h3{
+	margin: 0;
+}
+span{
+	font-size: 10px;
+}
+.columns{
+	display: grid;
+	grid-template-columns: 250px 150px 260px;
+	margin-top: 75px;
+	grid-gap: 55px;
+}
+.payment{
+	font-size: 17px;
+	display: grid;
+	grid-gap: 0;
+	grid-template-rows: 25px 25px 25px;
+}
+.payment p{
+	padding: 0;
+}
+.green{
+	color: green;
+}
+.delivery{
+	font-size: 17px;
+}
+.delivery img{
+	width: 65px;
+	height: 55px;
+}
+.inbetween{
+	background-color: #008bce;
+	height: 100%;
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	padding: 50px 100px;
+	grid-gap: 25px;
+}
+.inbetween h3{
+	color: white;
+	text-align: center;
+}
+.circle{
+	width: 90px;
+	height: 90px;
+	background-color: white;
+	border-radius: 50%;
+	justify-self: center;
+}
+.circle svg{
+	transform: translate(15px, 15px); 
+}
+.feature{
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 95px 50px;
+}
+.feature h3{
+	padding: 0 50px;
+}
 /* MEDIA QUERIES */
+
+
 @media only screen and (max-width: 1210px){
 	#nav{
 		padding: 0 40px;
+	}
+}
+@media only screen and (max-width: 1150px){
+	.columns{
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 20px;
 	}
 }
 @media only screen and (max-width: 1119px){
@@ -112,6 +193,10 @@ aside button{
 }
 	
 }
+@media only screen and (max-width: 921px){
+	
+}
+
 @media only screen and (max-width: 830px){
 	#nav{
 		display: grid;
