Added a "maintext" Section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,14 @@ span{
 .feature h3{
 	padding: 0 50px;
 }
+#floatright{
+	float: right;
+}
+
+.maintext{
+	width: 1100px;
+	margin: 60px auto;
+}
 /* MEDIA QUERIES */
 
 
