Added geo location map and contacts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,8 +178,22 @@ span{
 }
 
 .maintext{
-	width: 1100px;
+	max-width: 1100px;
 	margin: 60px auto;
+}
+.geo{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	margin: 60px auto;
+	max-width: 1100px;
+}
+.contacts{
+	align-self: center;
+	padding: 30px;
+	line-height: 20px;
+}
+.contacts p{
+
 }
 /* MEDIA QUERIES */
 
@@ -218,5 +232,8 @@ span{
 		font-size: 20px;
 		text-align: center;
 		padding: 30px 50px 0;
+	}
+	.columns{
+		grid-template-columns: 1fr;
 	}
 }
