--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,9 @@ nav {
 	color: #fff;
 	display: grid;
 	grid-template-columns: 1fr;
-
+}
+#contacts p{
+	text-align: center;
 }
 #contacts button {
 	width: 145px;
@@ -62,6 +64,9 @@ section{
 }
 aside{
 	color: #008bce;
+}
+aside div{
+	display: grid;
 }
 aside img{
 	max-width: 250px;
@@ -179,7 +184,7 @@ span{
 
 .maintext{
 	max-width: 1100px;
-	margin: 60px auto;
+	margin: 60px 25px;
 }
 .geo{
 	display: grid;
@@ -247,6 +252,15 @@ span{
 #callus button div{
 	transform: translate(0, -4px);
 }
+footer{
+	display: grid;
+	grid-template-columns: 1fr;
+}
+footer p{
+	justify-self: center;
+	align-self: center;
+	color: grey;
+}
 /* MEDIA QUERIES */
 
 
@@ -265,9 +279,37 @@ span{
 	#contacts div{
 		transform: translate(0 ,-30px);
 }
+	.questions{
+		padding: 0 30px;
+	}
+	#question1 p{
+		line-height: 1 !important;
+		font-size: 20px;
+	}
+	#question1 h2{
+		line-height: 1 !important;
+		font-size: 30px;
+	}
+	#callus h2{
+		font-size: 30px;
+	}
 	
+	#callus a{
+		font-size: 20px;
+	}
 }
-@media only screen and (max-width: 921px){
+@media only screen and (max-width: 948px){
+	.inbetween{
+		grid-template-columns: 1fr 1fr;
+		padding: 0 auto;
+	}
+	.creditcard{
+		grid-column: span 2;
+		justify-self: center;
+	}
+	.geo iframe{
+		max-width: 100%;
+	}
 	
 }
 
@@ -275,6 +317,7 @@ span{
 	#nav{
 		display: grid;
 		grid-template-columns: 1fr;
+		padding: 0;
 	}
 	#contacts, #intro{
 		justify-self: center;
@@ -287,5 +330,90 @@ span{
 	}
 	.columns{
 		grid-template-columns: 1fr;
+	}
+	section{
+		grid-template-columns: 1fr;
+		margin: 0 auto;
+		padding: 0 !important;
+	}
+	aside div{
+		grid-template-columns: 1fr;
+		margin: 0 auto;
+	}
+	aside select, input, aside button, #price{
+		text-align: center;
+		justify-self: center;
+	}
+	aside img.displayed{
+		margin-left: auto;
+		margin-right: auto;
+	}
+	#secimg{
+		margin: 0 auto;
+		display: grid;
+		grid-template-columns: 1fr;
+	}
+	#secimg img{
+		justify-self: center;
+	}
+	.text{
+		margin: 0 auto;
+		padding: 0 20px;
+		font-size: 14px;
+	}
+	.text h4{
+		text-align: center;
+		padding: 0;
+
+	}
+	.payment{
+		font-size: 14px;
+	}
+	.delivery{
+		font-size: 14px;
+		margin-bottom: 30px;
+	}
+}
+@media only screen and (max-width: 670px){
+	.inbetween{
+		grid-template-columns: 1fr !important;
+		padding: 50px 0 !important;
+		margin: 0 auto;
+		grid-gap: 30px;
+	}
+	.creditcard{
+		grid-column: 1;
+
+	}
+	.maintext{
+		display: grid;
+		grid-template-columns: 1fr;
+		font-size: 14px;
+	}
+	.maintext #floatright{
+		margin: 0 auto;
+		max-width: 300px;
+		max-height: 250px;
+	}
+	.geo{
+		grid-template-columns: 1fr;
+	}
+	.geo iframe{
+		max-height: 250px;
+	}
+	.questions{
+		grid-template-columns: 1fr;
+	}
+	#question1 h2, #question1 p{
+		text-align: center;
+	}
+	.questions #img{
+		transform: none;
+		transform: rotate(90deg);
+	}
+	footer{
+		font-size: 13px;
+		padding: 0 39px;
+		text-align: center;
 	}
 }
